Links no longer have that underline. NavPanel text now has spacing

--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,11 @@
   to { transform: rotate(360deg); }
 }
 
+a {
+  color: black;
+  text-decoration: none;
+}
+
 /* unvisited link */
 a:link {
   color: black;
